--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name butter_isa)
- (modules isa ram simulate modN register regfile)
+ (modules isa ram simulate modN register regfile mnemonics)
 )
