--- a/lib/assembler/dune
+++ b/lib/assembler/dune
@@ -1,6 +1,6 @@
 (library
  (name butter_as)
- (modules ast parser lexer butter_as)
+ (modules ast parser lexer butter_as assembler)
  (libraries menhirLib butter_isa common))
 
 (menhir
