Assembler: Added error messages file.

--- a/lib/assembler/dune
+++ b/lib/assembler/dune
@@ -5,7 +5,7 @@
 
 (menhir
  (modules parser)
- (flags --exn-carries-state --trace --dump)
+ ; (flags --exn-carries-state --trace --dump)
  ; (flags --exn-carries-state)
  ; (flags --strict)
  )
