ISA: Added psudo-instructions specifications and related code.

--- a/lib/isa/dune
+++ b/lib/isa/dune
@@ -1,5 +1,4 @@
 (library
  (name butter_isa)
- (modules base register pretty)
- (libraries common)
-)
+ (modules base register pseudo)
+ (libraries common))
